--- a/stories.html
+++ b/stories.html
@@ -91,7 +91,7 @@
                         	<span class="text-blue">MedTarget Rx</span> অ্যাপ্লিকেশনটির সম্পূর্ণ ধারণা পেতে দেখুন-<span class="text-blue">MedTarget Rx at a glance(Overview Video)</span>
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="https://youtu.be/06YrdN60MY0" target="_blank">বিস্তারিত দেখুন</a>
+                        	<a href="#" target="_blank">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
 							ব্যবহার করা সহজ, কোন ইনস্টলেশন ছাড়াই, ক্লাউড সার্ভার ভিত্তিক Application <span class="text-blue">MedTarget Rx.</span>
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="stories_inner_pricing.html">বিস্তারিত দেখুন</a>
+                        	<a href="#">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                     <div class="col-md-5 order-sm-1">
