--- a/stories.html
+++ b/stories.html
@@ -91,7 +91,7 @@
                         	<span class="text-blue">MedTarget Rx</span> অ্যাপ্লিকেশনটির সম্পূর্ণ ধারণা পেতে দেখুন-<span class="text-blue">MedTarget Rx at a glance(Overview Video)</span>
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="#" target="_blank">বিস্তারিত দেখুন</a>
+                        	<a href="#">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         	<span class="text-blue">MedTarget Rx-Quick Visit</span> এর কুইক ভিডিও টিউটোরিয়াল! 
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="https://youtu.be/Vwh5A0DwwQQ" target="_blank">বিস্তারিত দেখুন</a>
+                        	<a href="#">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                 </div>
