--- a/stories.html
+++ b/stories.html
@@ -168,7 +168,7 @@
                         	Doctors এবং Pharmacists-দের অনন্য সমন্বয়ে Standard Group-এর বিভিন্ন লোকেশনে ব্যবহৃত হচ্ছে <span class="text-blue">MedTarget Rx</span> Pharmacy Management System & Patient... 
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="stories_inner_group_doctors.html">বিস্তারিত দেখুন</a>
+                        	<a href="#">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                     <div class="col-md-5 order-sm-1">
@@ -201,7 +201,7 @@
 
                         </p>
                         <div class="btn_bistarito">
-                        	<a href="stories_inner_single_doctor.html">বিস্তারিত দেখুন</a>
+                        	<a href="#">বিস্তারিত দেখুন</a>
                     	</div>
                     </div>
                 </div>
